--- a/src/main/resources/templates/movieTimes/index.html
+++ b/src/main/resources/templates/movieTimes/index.html
@@ -196,8 +196,8 @@
             <th style="border-right: 1px solid #ccc;">Ngày chiếu</th>
             <th style="border-right: 1px solid #ccc;">Giờ chiếu</th>
             <th style="border-right: 1px solid #ccc;">Giá vé </th>
-            <th style="border-right: 1px solid #ccc;">Số lượng vé  </th>
-            <th style="border-right: 1px solid #ccc;">Tổng số tiền</th>
+            <th style="border-right: 1px solid #ccc;">Số lượng vé đã bán </th>
+            <th style="border-right: 1px solid #ccc;">Tổng số tiền thu được</th>
             <th colspan="2">Chức Năng</th>
         </tr>
         </thead>
