--- a/src/main/resources/templates/ticket/showTicket.html
+++ b/src/main/resources/templates/ticket/showTicket.html
@@ -5,32 +5,32 @@
     <title>Title</title>
 </head>
 <body>
-<form th:action="@{/ticket/save}" method="post">
+<form th:action="@{/ticket/save}" method="post" th:object="${ticket}">
 
+    <input type="hidden" th:field="*{movieTimes}" >
+    <input name="idMovieTimes" th:value="${movieTimes.get().id}" type="hidden">
 
-    <span>Ngày chiếu </span>
-    <!-- Sử dụng input thay vì span và đặt tên là "idMovieTimes" -->
-    <input th:value="*{movieTimes.get().id}" name="idMovieTimes" type="hidden">
-    <span th:text="*{movieTimes.get().showDate}"></span>
+    <span>Ngày chiếu</span>
     <br>
-    <span>Tên phim </span>
-    <input th:value="*{movie.get().id}" name="idMovie" type="hidden">
-    <span th:text="*{movie.get().nameMovie}"></span>
+
+    <span>Tên phim</span>
+    <span th:text="${movie.get().nameMovie}"></span>
+
     <br>
-    <span>Rạp phim </span>
-    <input th:value="*{theater.get().id}" name="idTheater" type="hidden">
-    <span th:text="*{theater.get().nameTheater}"></span>
+
+    <span>Rạp phim</span>
+    <span th:text="${theater.get().nameTheater}"></span>
     <br>
+
     <span>Giá vé</span>
-    <input th:value="*{movieTimes.get().id}" name="idMovieTimes" type="hidden">
-    <span th:text="*{movieTimes.get().totalMoney}"></span>
+    <span th:text="${movieTimes.get().totalMoney}"></span>
     <br>
+
     <span>Phòng</span>
-    <input th:value="*{room.get().id}" name="idRoom" type="hidden">
-    <span th:text="*{room.get().roomName}"></span>
+    <span th:text="${room.get().roomName}"></span>
     <br>
+
     <input type="submit" value="Đồng ý">
 </form>
-
 </body>
 </html>
