--- a/src/main/resources/templates/movie/update.html
+++ b/src/main/resources/templates/movie/update.html
@@ -184,6 +184,7 @@
     <a th:href="@{/movieTime}" >Giờ chiếu</a>
     <a th:href="@{/movieTimes}" >Lịch chiếu</a>
     <a th:href="@{/ticket}">Đặt vé</a>
+    <a th:href="@{/ticket/showTicket}"   >Lịch sử</a>
 </div>
 <div class="code" style="padding: 20px; background-color: #f0f0f0; overflow-x: auto; border-radius: 5px;" >
 
