--- a/src/main/resources/templates/room/index.html
+++ b/src/main/resources/templates/room/index.html
@@ -175,9 +175,11 @@
     <!-- Bỏ hình ảnh và thẻ h1 -->
 </div>
 <div class="nav">
+
+
     <form action="/room/check">
-        <span style="line-height: normal;color: #ffffff"  >Số Phòng</span>
-        <input name="roomName"  type="text">
+
+        <input name="roomName"  type="text" placeholder="Nhập Số Phòng ">
         <input type="submit" value="Tìm kiếm">
     </form>
 </div>
@@ -189,6 +191,7 @@
     <a th:href="@{/movieTime}" >Giờ chiếu</a>
     <a th:href="@{/movieTimes}"  >Lịch chiếu</a>
     <a th:href="@{/ticket}"  >Đặt vé</a>
+    <a th:href="@{/ticket/showTicket}"   >Lịch sử</a>
 </div>
 <div class="code">
 
@@ -220,11 +223,11 @@
         </tbody>
     </table>
 
-<!--    <div class="pagination">-->
-<!--        <a th:if="${rooms.hasPrevious()}" th:href="@{/room(page=${rooms.number - 1})}">Previous</a>-->
-<!--        <span class="current-page" th:text="${rooms.number + 1}"></span>|<span th:text="${rooms.totalPages}"></span>-->
-<!--        <a th:if="${rooms.hasNext()}" th:href="@{/room(page=${rooms.number + 1})}">Next</a>-->
-<!--    </div>-->
+    <div class="pagination">
+        <a th:if="${rooms.hasPrevious()}" th:href="@{/room(page=${rooms.number - 1})}">Previous</a>
+        <span class="current-page" th:text="${rooms.number + 1}"></span>|<span th:text="${rooms.totalPages}"></span>
+        <a th:if="${rooms.hasNext()}" th:href="@{/room(page=${rooms.number + 1})}">Next</a>
+    </div>
 </div>
 </body>
 </html>
