--- a/src/main/resources/templates/movieTime/index.html
+++ b/src/main/resources/templates/movieTime/index.html
@@ -182,6 +182,7 @@
     <a th:href="@{/movieTime}" style="background: #0d47a1" >Giờ chiếu</a>
     <a th:href="@{/movieTimes}" >Lịch chiếu</a>
     <a th:href="@{/ticket}"  >Đặt vé</a>
+    <a th:href="@{/ticket/showTicket}"   >Lịch sử</a>
 
 </div>
 <div class="code">
