--- a/src/main/resources/templates/movieTimes/remote.html
+++ b/src/main/resources/templates/movieTimes/remote.html
@@ -189,6 +189,7 @@
     <a th:href="@{/movieTime}" >Giờ chiếu</a>
     <a th:href="@{/movieTimes}"  style="background: #0d47a1" >Lịch chiếu</a>
     <a th:href="@{/ticket}"  >Đặt vé</a>
+    <a th:href="@{/ticket/showTicket}"   >Lịch sử</a>
 </div>
 <div class="code">
     <button class="button" onclick="window.location.href='/room'"><-Trở về</button>
